--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # Files and directories created by pub
 .dart_tool/
+.idea/
 .packages
 build/
 # If you're building an application, you may want to check-in your pubspec.lock
@@ -34,3 +35,5 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+transcribe_mate/android/app/google-services.json
